--- a/src/index.scss
+++ b/src/index.scss
@@ -12,12 +12,10 @@
 	background-color: #f5f5f5;
 
 	.body__container {
-		width: 100vw;
 		min-height: 100vh;
 		background-color: #f5f5f5;
 
 		.flashing-page__container {
-			width: 100vw;
 			min-height: 100vh;
 			background-color: #f5f5f5;
 		}
